Insert small change to trigger CI/CD

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <main>
         <section class="box">
             <div class="box--about">
-                some really long text about me and stuff...
+                some really long text about me and stuff version 2.0 ... yyess...
             </div>
         </section>
         <section class="menu">
