Update timerfy url

--- a/src/index.html
+++ b/src/index.html
@@ -34,66 +34,68 @@
         <section class="max-w-4xl lg:w-6/12 w-full p-3.5 portfolio">
 
 
-                <h1 class="text-2xl m-0 portfolio--header">About</h1>
-                <div class="p-0 m-0 w-10 h-0 portfolio--hr"></div>
+            <h1 class="text-2xl m-0 portfolio--header">About</h1>
+            <div class="p-0 m-0 w-10 h-0 portfolio--hr"></div>
 
-                <div class="text-gray-400 lg:text-2xl">
+            <div class="text-gray-400 lg:text-2xl">
 
-                    <div class="shape-outer nonagon">
-                        <div class="shape-inner nonagon"></div>
-                    </div>
-                    <p class="my-6">Hi! I'm Mario Callejas. I'm a full-stack developer ready to take my skills and
-                        create the next big thing. Even though, I can build anything I put my mind too and tackle any
-                        part part of the stack(front-end, back-end, devops etc.,). I have a soft spot for making
-                        easy-to-use, functional products that people use and enjoy. I am interested in tackling problems
-                        that really challenge me and put my skills to the test. I was originally born in Venezuela,
-                        raised in the United States and now living in Norway. My experience varies from working at
-                        Fortune 100 companies to Sillicon Valley based startups. Want to talk? Let's have some fun
-                        together!</p>
-                    
+                <div class="shape-outer nonagon">
+                    <div class="shape-inner nonagon"></div>
                 </div>
+                <p class="my-6">Hi! I'm Mario Callejas. I'm a full-stack developer ready to take my skills and
+                    create the next big thing with you. Even though, I can build anything I put my mind to and tackle
+                    any part of the stack. I have a soft spot for making easy-to-use, functional products that people
+                    use and enjoy. I'm interested in tackling problems
+                    that really challenge me and put my skills to the test. I was originally born in Venezuela,
+                    raised in the United States and now living in Norway. My experience varies from working at
+                    Fortune 100 companies to Sillicon Valley based startups. Have a cool project to work on? Let's meet!</p>
 
+            </div>
+
+            <br>
+
+
+            <h1 class="text-2xl m-0 portfolio--header">Recent Works</h1>
+            <div class="p-0 m-0 w-10 h-0 portfolio--hr"></div>
+
+            <div class="text-gray-400 lg:text-2xl py-5">
+
+                <p>Timerfy - A pomodoro technique timer designed to help me maintain focus and have blazing speed productivity throughout my working day. Reached
+                    around 1.5k monthly users during its first few months of being launched!</p>
+                <a href="https://mariothedev.github.io/timerfy/#/"><i class="fas fa-link text-gray-500 text-3xl p-1.5"></i>https://mariothedev.github.io/timerfy/#/</a>
                 <br>
+                <br>
+                <p>Urd Sender - A mini app designed to help me remember Norwegian words. Words are pulled from Notiond and sent via Telegram at regular intervals. Sweet goodies!</p>
+                <a href="https://github.com/mariothedev/urd-sender"><i class="fas fa-link text-gray-500 text-3xl p-1.5"></i>https://github.com/mariothedev/urd-sender</a>
+            </div>
 
 
-                <h1 class="text-2xl m-0 portfolio--header">Recent Works</h1>
-                <div class="p-0 m-0 w-10 h-0 portfolio--hr"></div>
+            <h1 class="text-2xl m-0 portfolio--header">Contact</h1>
+            <div class="p-0 m-0 w-10 h-0 portfolio--hr"></div>
 
-                <div class="text-gray-400 lg:text-2xl py-5">
 
-                    <p>Timerfy - A pomodoro technique timer that helps users maintain focus and productivity. Reached
-                        around 1.5k monthly users during it's first months of being launched.</p>
-                    <a href="#"><i class="fas fa-link text-gray-500 text-3xl p-1.5"></i>Timerfy.com</a>
-                    <br>
-                    <br>
-                    <p>Glue - A pomodoro technique timer that helps users maintain focus and productivity. Reached
-                        around 1.5k monthly users during it's first months of being launched.</p>
-                    <a href="#"><i class="fas fa-link text-gray-500 text-3xl p-1.5"></i>glue.com</a>
+
+            <div class="flex flex-col flex-wrap justify-evenly lg:flex-row portfolio--contact">
+
+                <div
+                    class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl">
+                    <a href="tel:+4746125179"><i class="fas fa-phone p-1.5"></i>+4746125179</a>
+                </div>
+                <div
+                    class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl">
+                    <a href="mailto:mariothedev@gmail.com"><i class="fas fa-at p-1.5"></i>mariothedev@gmail.com</a>
+                </div>
+                <div
+                    class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl">
+                    <a href="https://drive.google.com/file/d/13XaF5FZ7zhI3AD-udCfZt5L8RFwUkbng/view"><i
+                            class="fas fa-file p-1.5"></i>Resume</a></div>
+                <div
+                    class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl">
+                    <a href="https://github.com/mariothedev"><i class="fab fa-github-alt p-1.5"></i>Github</a>
                 </div>
 
 
-                <h1 class="text-2xl m-0 portfolio--header">Contact</h1>
-                <div class="p-0 m-0 w-10 h-0 portfolio--hr"></div>
-
-
-
-                <div class="flex flex-col flex-wrap justify-evenly lg:flex-row portfolio--contact">
-
-                    <div class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl"><a
-                            href="tel:+"><i class="fas fa-phone p-1.5"></i>545889888</a>
-                    </div>
-                    <div class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl"><a
-                            href="mailto:"><i
-                                class="fas fa-at p-1.5"></i>mariothedev@gmail.com</a>
-                    </div>
-                    <div class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl"><a
-                            href="#"><i class="fas fa-file p-1.5"></i>Resume</a></div>
-                    <div class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl"><a
-                            href="#"><i class="fab fa-github-alt p-1.5"></i>Github</a>
-                    </div>
-
-
-                </div>
+            </div>
 
 
 
