--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>webpack starterkit</title>
+    <title>MarioTheDev</title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
-    <script src="https://kit.fontawesome.com/4040e3be26.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"
+    <script async src="https://kit.fontawesome.com/4040e3be26.js" crossorigin="anonymous"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"
         integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
@@ -42,13 +42,16 @@
                 <div class="shape-outer nonagon">
                     <div class="shape-inner nonagon"></div>
                 </div>
-                <p class="my-6">Hi! I'm Mario Callejas. I'm a full-stack developer ready to take my skills and
-                    create the next big thing with you. Even though, I can build anything I put my mind to and tackle
-                    any part of the stack. I have a soft spot for making easy-to-use, functional products that people
-                    use and enjoy. I'm interested in tackling problems
-                    that really challenge me and put my skills to the test. I was originally born in Venezuela,
-                    raised in the United States and now living in Norway. My experience varies from working at
-                    Fortune 100 companies to Sillicon Valley based startups. Have a cool project to work on? Let's meet!</p>
+                <p class="my-6"></p>
+                <p class="my-6">Hi! I'm Mario Callejas. I'm a full-stack developer, ready to take my skills and create
+                    the next big thing with you. I can build anything I put my mind to and tackle any part of the stack.
+                    But more than anything, I have a soft spot for making easy-to-use, functional products that people
+                    use and enjoy. I'm interested in tackling problems that really challenge me and put my skills to the
+                    test.</p>
+                <p class="my-6">I was born in Venezuela, raised in the United States, and now living in Norway. My
+                    experience varies from working at Fortune 500 companies to Silicon Valley based startups. </p>
+                <p class="my-6">Have a cool project to work on? Let's meet!</p>
+
 
             </div>
 
@@ -60,13 +63,17 @@
 
             <div class="text-gray-400 lg:text-2xl py-5">
 
-                <p>Timerfy - A pomodoro technique timer designed to help me maintain focus and have blazing speed productivity throughout my working day. Reached
+                <p>Timerfy - A pomodoro technique timer designed to help me maintain focus and have blazing speed
+                    productivity throughout my working day. Reached
                     around 1.5k monthly users during its first few months of being launched!</p>
-                <a href="https://mariothedev.github.io/timerfy/#/"><i class="fas fa-link text-gray-500 text-3xl p-1.5"></i>https://mariothedev.github.io/timerfy/#/</a>
+                <a href="https://mariothedev.github.io/timerfy/#/"><i
+                        class="fas fa-link text-gray-500 text-3xl p-1.5"></i>https://mariothedev.github.io/timerfy/#/</a>
                 <br>
                 <br>
-                <p>Urd Sender - A mini app designed to help me remember Norwegian words. Words are pulled from Notiond and sent via Telegram at regular intervals. Sweet goodies!</p>
-                <a href="https://github.com/mariothedev/urd-sender"><i class="fas fa-link text-gray-500 text-3xl p-1.5"></i>https://github.com/mariothedev/urd-sender</a>
+                <p>Urd Sender - A mini app designed to help me remember Norwegian words. Words are pulled from Notion
+                    and sent via Telegram at regular intervals. Sweet goodies!</p>
+                <a href="https://github.com/mariothedev/urd-sender"><i
+                        class="fas fa-link text-gray-500 text-3xl p-1.5"></i>https://github.com/mariothedev/urd-sender</a>
             </div>
 
 
@@ -79,7 +86,7 @@
 
                 <div
                     class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl">
-                    <a href="tel:+4746125179"><i class="fas fa-phone p-1.5"></i>+4746125179</a>
+                    <a href="tel:46125179"><i class="fas fa-phone p-1.5"></i>461 25 179</a>
                 </div>
                 <div
                     class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl">
@@ -88,7 +95,8 @@
                 <div
                     class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl">
                     <a href="https://drive.google.com/file/d/13XaF5FZ7zhI3AD-udCfZt5L8RFwUkbng/view"><i
-                            class="fas fa-file p-1.5"></i>Resume</a></div>
+                            class="fas fa-file p-1.5"></i>Resume</a>
+                </div>
                 <div
                     class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl">
                     <a href="https://github.com/mariothedev"><i class="fab fa-github-alt p-1.5"></i>Github</a>
@@ -102,30 +110,6 @@
         </section>
 
     </main>
-
-    <script>
-
-
-        const slideIn3DContent = _ => anime({
-            targets: '.portfolio',
-            duration: 800,
-            skewY: ['-10deg', '-10deg'],
-            translateX: ['-105vw', 0],
-            translateY: ['-105vh', '7vmax'],
-        })
-
-        const boxParent = document.querySelector('.cube--demo')
-
-        const hiddenClasses = ['absolute', 'invisible', 'opacity-0']
-
-        boxParent.addEventListener('animationend', _ => {
-            boxParent.style.display = "none"
-            slideIn3DContent()
-        })
-
-
-
-    </script>
 </body>
 
 </html>
