Add proper background image of me and fix flexbox issue

--- a/src/index.html
+++ b/src/index.html
@@ -67,13 +67,13 @@
                     productivity throughout my working day. Reached
                     around 1.5k monthly users during its first few months of being launched!</p>
                 <a href="https://mariothedev.github.io/timerfy/#/"><i
-                        class="fas fa-link text-gray-500 text-3xl p-1.5"></i>https://mariothedev.github.io/timerfy/#/</a>
+                        class="fas fa-link text-gray-500 text-3xl p-1.5"></i>Timerfy</a>
                 <br>
                 <br>
                 <p>Urd Sender - A mini app designed to help me remember Norwegian words. Words are pulled from Notion
                     and sent via Telegram at regular intervals. Sweet goodies!</p>
                 <a href="https://github.com/mariothedev/urd-sender"><i
-                        class="fas fa-link text-gray-500 text-3xl p-1.5"></i>https://github.com/mariothedev/urd-sender</a>
+                        class="fas fa-link text-gray-500 text-3xl p-1.5"></i>Urd Sender</a>
             </div>
 
 
@@ -82,23 +82,23 @@
 
 
 
-            <div class="flex flex-col flex-wrap justify-evenly lg:flex-row portfolio--contact">
+            <div class="flex flex-wrap portfolio--contact">
 
                 <div
-                    class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl">
+                    class="bg-soft-grey cursor-pointer hover:scale-110 my-3 mx-1.5 p-3 transform rounded text-center text-gray-500 lg:text-2xl">
                     <a href="tel:46125179"><i class="fas fa-phone p-1.5"></i>461 25 179</a>
                 </div>
                 <div
-                    class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl">
+                    class="bg-soft-grey cursor-pointer hover:scale-110 my-3 mx-1.5 p-3 transform rounded text-center text-gray-500 lg:text-2xl">
                     <a href="mailto:mariothedev@gmail.com"><i class="fas fa-at p-1.5"></i>mariothedev@gmail.com</a>
                 </div>
                 <div
-                    class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl">
+                    class="bg-soft-grey cursor-pointer hover:scale-110 my-3 mx-1.5 p-3 transform rounded text-center text-gray-500 lg:text-2xl">
                     <a href="https://drive.google.com/file/d/13XaF5FZ7zhI3AD-udCfZt5L8RFwUkbng/view"><i
                             class="fas fa-file p-1.5"></i>Resume</a>
                 </div>
                 <div
-                    class="bg-soft-grey cursor-pointer hover:scale-110 my-3 p-3 transform rounded text-gray-500 lg:text-2xl">
+                    class="bg-soft-grey cursor-pointer hover:scale-110 my-3 mx-1.5 p-3 transform rounded text-center text-gray-500 lg:text-2xl">
                     <a href="https://github.com/mariothedev"><i class="fab fa-github-alt p-1.5"></i>Github</a>
                 </div>
 
