Update wording on self-description

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                     <div class="shape-inner nonagon"></div>
                 </div>
                 <p class="my-6"></p>
-                <p class="my-6">Hi! I'm Mario Callejas. I'm a full-stack developer, ready to take my skills and create
+                <p class="my-6">Hi! I'm Mario Callejas. I'm a frontend web developer, ready to take my skills and create
                     the next big thing with you. I can build anything I put my mind to and tackle any part of the stack.
                     But more than anything, I have a soft spot for making easy-to-use, functional products that people
                     use and enjoy. I'm interested in tackling problems that really challenge me and put my skills to the
