--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
                 <br>
                 <br>
                 <p>Urd Sender - A mini app designed to help me remember Norwegian words. Words are pulled from Notion
-                    and sent via Telegram at regular intervals. Sweet goodies!</p>
+                    and sent via Twilio at regular intervals. Sweet goodies!</p>
                 <a href="https://github.com/mariothedev/urd-sender"><i
                         class="fas fa-link text-gray-500 text-3xl p-1.5"></i>Urd Sender</a>
             </div>
