--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                     <div class="shape-inner nonagon"></div>
                 </div>
                 <p class="my-6"></p>
-                <p class="my-6">Hi! I'm Mario Callejas. I'm a frontend web developer, ready to take my skills and create
+                <p class="my-6">Hi! I'm Mario Callejas. I'm a fullstack developer, ready to take my skills and create
                     the next big thing with you. I can build anything I put my mind to and tackle any part of the stack.
                     But more than anything, I have a soft spot for making easy-to-use, functional products that people
                     use and enjoy. I'm interested in tackling problems that really challenge me and put my skills to the
@@ -94,7 +94,7 @@
                 </div>
                 <div
                     class="bg-soft-grey cursor-pointer hover:scale-110 my-3 mx-1.5 p-3 transform rounded text-center text-gray-500 lg:text-2xl">
-                    <a href="https://drive.google.com/file/d/1Px0ElVmhdH1S-dZ1ymYUbiXfx01gBKSh/view"><i
+                    <a href="https://drive.google.com/file/d/1DVk9j30mb20m7EdpVspqJOByMwDYEAfE/view?usp=sharing"><i
                             class="fas fa-file p-1.5"></i>Resume</a>
                 </div>
                 <div
